# memory-up-re

./: .gitignore  Cargo.toml
apps/desktop/: .eslintrc.json  .gitignore  components.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs  utils.rs
apps/desktop/src-tauri/src/commands/: cmd_reviews.rs  decks_commands.rs  flashcards_commands.rs  mod.rs
apps/desktop/src/components/: card-preview.tsx  toggle-theme.tsx
apps/desktop/src/components/Sidebar/: index.tsx
apps/desktop/src/components/create-deck-card/: create-deck-card-dialog.tsx  index.tsx
apps/desktop/src/components/deck-card/: deck-card-dialog.tsx  index.tsx
apps/desktop/src/components/ui/: button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  separator.tsx  table.tsx  textarea.tsx
apps/desktop/src/lib/: convert-to-furigana.ts
apps/desktop/src/pages/: stats.tsx
apps/desktop/src/pages/card/: index.tsx
apps/desktop/src/pages/create-card/: index.tsx
apps/desktop/src/pages/deck/: index.tsx
apps/desktop/src/pages/error/: index.tsx
apps/desktop/src/pages/home/: index.tsx
apps/desktop/src/pages/quiz/: index.tsx  review.tsx
apps/desktop/src/styles/: global.css
crates/domain/: Cargo.toml
crates/domain/src/entities/: deck.rs  flashcard.rs  mod.rs  review.rs
crates/domain/src/repositories/: decks.rs  flashcards.rs  mod.rs  reviews.rs
crates/domain/src/use_cases/: mod.rs
crates/domain/src/use_cases/decks/: create_deck.rs  find_all_decks.rs  find_deck_by_id.rs  mod.rs
crates/domain/src/use_cases/flashcards/: create_flashcard.rs  find_flashcard_by_id.rs  find_flashcard_for_review.rs  find_flashcards_by_deck_id.rs  find_flashcards_left_for_review.rs  get_total_flashcards_by_deck.rs  mod.rs  review_flashcard_use_case.rs  update_flashcard.rs
crates/domain/src/use_cases/reviews/: create_review.rs  find_reviews_by_deck_id.rs  get_correct_percentage.rs  get_total_reviews_by_month.rs  get_total_reviews_by_quality.rs  mod.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/sql/: .env  Cargo.toml
crates/sql/migrations/: 20240211081901_create_decks_table.down.sql  20240211081901_create_decks_table.up.sql  20240211081945_create_flashcards_table.down.sql  20240211081945_create_flashcards_table.up.sql  20240501031204_create_reviews_table.down.sql  20240501031204_create_reviews_table.up.sql
crates/sql/src/: db_manager.rs  lib.rs
crates/sql/src/repositories/: decks_repository.rs  flashcards_repository.rs  mod.rs  reviews_repository.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
