[workspace]
resolver = "2"
members = [
  "crates/domain",
  "crates/sql",
  "crates/utils",
  "crates/http",
  "apps/desktop/src-tauri", "crates/scheduler",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "migrate", "uuid" ] }
async-trait = "0.1.77"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
rand = "0.8.5"
