[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-notification = "2.0.0-beta.7"
