[package]
name = "sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "migrate", "uuid" ] }
dotenvy = "0.15.7"
futures = "0.3"

domain = { path = "../domain" }
utils = { path  = "../utils" }