[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde ={ workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
