[package]
name = "memory-up-2"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2.0.0-beta.7"

sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "sqlite",
  "migrate",
  "uuid",
] }

domain = { path = "../../../crates/domain" }
sql = { path = "../../../crates/sql" }
utils = { path = "../../../crates/utils" }
scheduler = { path = "../../../crates/scheduler"}
tokio = { workspace = true }

# dev
tauri-plugin-devtools = { version = "2.0.0-beta.0" }
